<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"  >
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
      <TextView
        android:id="@+id/textView0"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/growthinfo0" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
     <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_Formula" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/growth" android:padding="10dp"/>

      <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/growthinfo1" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
       <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_Growth" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_Div0" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_DivN"
        android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
        <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/explain_Years" android:padding="10dp"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

</LinearLayout>
</ScrollView>