<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/npv0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/npv_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" >
        </EditText>

        <TextView
            android:id="@+id/npv_specialinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/npvspecialinstructions" />

        <SeekBar
            android:id="@+id/npv_seekbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="15"
            android:paddingLeft="15dp"
            android:paddingRight="15dp" />

        <TextView
            android:id="@+id/npv_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/npv1" />

        <LinearLayout
            android:id="@+id/npv_calcfields"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        </LinearLayout>

        <Button
            android:id="@+id/npv_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate" />

        <TextView
            android:id="@+id/npv_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />
    </LinearLayout>

</ScrollView>