<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/growth0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/explain_Instructions"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Growth Rate"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/growth_g"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Dividends today (Div0)"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/growth_divnow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >
        </EditText>

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Dividends -T- years ago"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/growth_div_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberDecimal" >

        </EditText>

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="Number of years"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/growth_t"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/growth_t_hint"
            android:inputType="numberDecimal" >

        </EditText>

        <Button
            android:id="@+id/grwoth_calc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculate" />

        <TextView
            android:id="@+id/growth_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="0"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/growth_infobutton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Information" />

    </LinearLayout>

</ScrollView>